<resources>
    <string name="app_name">Listening</string>
    <string name="categories">Категории</string>
    <string name="length">Длительность</string>
    <string name="settings">Настройки</string>
    <string name="Listening">Listening</string>
    <string name="track_cover">Обложка трека</string>
    <string name="no_category">Нет категории</string>
    <string name="audio_default_time">0:00</string>
    <string name="dash">-</string>
    <string name="unknown_error">Неизвестная ошибка</string>
    <string name="no_audio">Нет аудио</string>
    <string name="negative_default_time">-0:00</string>
    <string name="reset">СБРОСИТЬ</string>
    <string name="select_categories">Выберите категории</string>
    <string name="apply">Применить</string>
    <string name="select_tags">Выберите категорию</string>
    <string name="try_to_refresh"><![CDATA[<p>Попробуйте <b><font color=#3f89ff>сбросить </b> фильтры или поменять настройки.</p>]]></string>
    <string name="nothing_found">Ничего не найдено</string>
    <string name="remainders">Напоминания</string>
    <string name="level">Уровень</string>
    <string name="all_accents">Все акценты</string>
    <string name="international">Интернациональный</string>
    <string name="british">Британский</string>
    <string name="ameriacan">Американский</string>
    <string name="got_problem">Возникли проблемы с приложением?</string>
    <string name="beginner">Начальный</string>
    <string name="leftTime">- %s</string>
    <string name="audio_did_not_start">Аудио грузиться слишком громко, попробуйте другое аудио</string>
    <string name="days">Дни</string>
    <string name="time">Время</string>
    <string name="only_week_days">Только будни</string>
    <string name="afternoon">12:00</string>
    <string name="settings_saved">Настройки сохранены</string>
    <string name="select_duration">Выберите продолжительность</string>
    <string name="select">Выбрать</string>
    <string name="cancel">Отмена</string>
    <string name="from0to5">От 0 до 5 минут</string>
    <string name="from5to10">От 5 до 10 минут</string>
    <string name="from10to20">От 10 до 20 минут</string>
    <string name="from20andMore">От 20 и больше минут</string>
    <string name="write_to_developer">Написать разработчикам</string>
    <string name="elementary">Elementary</string>
    <string name="preintermediate">Pre-Intermediate</string>
    <string name="intermediate">Intermediate</string>
    <string name="upperintermediate">Upper-Intermediate</string>
    <string name="advanced">Advanced</string>
    <string name="no_email_client">У вас не установленн ни один почтовы клиент.</string>
    <string name="skyeng_listening">SkyEng Listening</string>
    <string name="selected_categories">%d Категории</string>
    <string name="selected_time">%1$d - %2$d минут</string>
    <string name="from_0_and_greater">От 0 и больше</string>
    <string name="from_0_to">От 0 до %d</string>
    <string name="from_n_and_greater">От %d и больше</string>
    <string name="hide_subtitles">Скрыть субтитры</string>
    <string name="go_to_exercise">Перейти к упражнению</string>
    <string name="all_correct">Все верно!</string>
    <string name="dont_stop_further_difficult">Но не останавливайтесь. \nДальше — сложнее!</string>
    <string name="did_u_like_everything">Вам всё понравилось?</string>
    <string name="done">Готово</string>
    <string name="from">От</string>
    <string name="zero_minutes">0 минут</string>
    <string name="five_minutes">5 минут</string>
    <string name="ten_minutes">10 минут</string>
    <string name="twenty_minutes">20 минут</string>
    <string name="to">До</string>
    <string name="more">больше</string>
    <string name="no_data">Нету данных</string>


    <string-array name="notification_days">
        <item>Только выходные</item>
        <item>Только будни</item>
        <item>Каждый день</item>
        <item>Понедельник</item>
        <item>Вторник</item>
        <item>Среда</item>
        <item>Четверг</item>
        <item>Пятница</item>
        <item>Суббота</item>
        <item>Воскресение</item>
    </string-array>

    <string-array name="notification_time">
        <item>0:00</item>
        <item>1:00</item>
        <item>2:00</item>
        <item>3:00</item>
        <item>4:00</item>
        <item>5:00</item>
        <item>6:00</item>
        <item>7:00</item>
        <item>8:00</item>
        <item>9:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        <item>18:00</item>
        <item>19:00</item>
        <item>20:00</item>
        <item>21:00</item>
        <item>22:00</item>
        <item>23:00</item>
    </string-array>


</resources>
